# scikit-plots

./: .codecov.yml  .codespell-ignore-words  .codespellrc-ignore-words  .coveragerc  .cython-lint.toml  .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  CHECKLIST.yml  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  Readme_0.3.7.md  SECURITY.md  dev.py  environment.yml  meson.build  meson.options  pyproject.toml  pytest.ini  requirements.txt  settings.json  setup.cfg  (+3 more)
scikitplot/: __config__.py.in  __config__.pyi  __init__.py  __init__.pyi  __main__.py  _c_internal_utils.pyi  _citation.py.in  _config.py  _distributor_init.py  _docstring.py  _docstring.pyi  _docstrings.py  _globals.py  _globals.pyi  _log.py  _logo.py  _magic.py  _min_dependencies.py  _numcpp_api.pxd  _preprocess.py  _preprocess.pyi  _reset.py  _statistics.py  algorithms.py  annoy.pxd  cbook.py  cbook.pyi  cexperimental.pxd  cexternals.pxd  classifiers.py  cli.py  cluster.py  clustering.py  conftest.py  deciles.py  decomposition.py  dummy.py  environment_variables.py  estimators.py  exceptions.py  (+15 more)
scikitplot/_api/: __init__.py  __init__.pyi  deprecation.py  deprecation.pyi  meson.build
scikitplot/_astropy/: __init__.py  meson.build
scikitplot/_build_utils/: __init__.py  conv_template.py  copyfiles.py  cython_generate.py  cythoner.py  fix_submodule_import.py  fix_submodule_import_v2.py  gcc_build_bitness.py  gitversion.py  install_meson_features.py  link-version-pyinit.map  process_src_template.py  system_info.py  tempita.py  version.py
scikitplot/_cli/: _cmdoptions_click.py  _cmdoptions_optparse.py  _misc.py  cli.py
scikitplot/_clv/: __init__.py  plotting.py  utils.py
scikitplot/_compat/: __init__.py  _compat.py  _sklearn.py  numpycompat.py  optional_deps.py  python.py
scikitplot/_core/: __init__.py  data.py  exceptions.py  groupby.py  meson.build  moves.py  overrides.py  plot.py  properties.py  rules.py  scales.py  subplots.py
scikitplot/_datasets/: __init__.py  data_loader.py
scikitplot/_decorates/: __init__.py  _decorate.py
scikitplot/_docstrings/: __init__.py  _docstring.py  _docstring.pyi  decorate.py  meson.build
scikitplot/_externals/: __init__.py  _arff.py  appdirs.py  meson.build
scikitplot/_f2py/: __init__.py
scikitplot/_factory_api/: __init__.py  classifiers.py  clustering.py  objects.py
scikitplot/_kds/: __init__.py
scikitplot/_lib/: __init__.py  _array_api.py  _array_api_compat_vendor.py  _array_api_no_0d.py  _ccallback_c.pyx  _gcutils.py  _pep440.py  _test_deprecation_def.pyx  _util.py  array_api_compat.pyi  array_api_extra.pyi  decorator.py  deprecation.py  doccer.py  meson.build  messagestream.pxd  messagestream.pyx  validation.py
scikitplot/_marks/: area.py  bar.py  base.py  dot.py  line.py  text.py
scikitplot/_modelplotpy/: __init__.py
scikitplot/_numcpp_api/: __init__.py  cy_numcpp_api.pxd  cy_numcpp_api.pxi  cy_numcpp_api.pyi  cy_numcpp_api.pyx  meson.build
scikitplot/_seaborn/: __init__.py  _base.py  _compat.py  _docstrings.py  _statistics.py  _testing.py  algorithms.py  axisgrid.py  categorical.py  cm.py  conftest.py  distributions.py  matrix.py  miscplot.py  objects.py  palettes.py  rcmod.py  regression.py  relational.py  utils.py  widgets.py
scikitplot/_sphinxext/: __init__.py  figmpl_directive.py  mathmpl.py  meson.build  plot_directive.py  roles.py
scikitplot/_testing/: __init__.py  _pytesttester.py  _pytesttester.pyi  _testing.py
scikitplot/_tweedie/: __init__.py  _tweedie_dist.py
scikitplot/_typing/: __init__.py  _typing.py
scikitplot/_ui_app/: __init__.py  build_ui_app.py
scikitplot/_utils/: __init__.py  __init__.pyi  _c_internal_utils.pyi  _convertions.py  _convertions.pyi  _export.py  _inspect.py  _inspect.pyi  _param_validation.py  _pep440.py  _pep440.pyi  _show_versions.py  _wasm.py  cli_args.py  decorators.py  deprecation.py  env_manager.py  exceptions.py  file_utils.py  introspection.py  lazy_load.py  logging_utils.py  meson.build  misc.py  os.py  process.py  sp_export.py  string_utils.py  time.py  timeout.py  uri.py  validation.py  yaml_utils.py
scikitplot/_xp_core_lib/: __init__.py  _array_api.py  _array_api_compat_vendor.py  _array_api_no_0d.py  _bunch.py  _ccallback.pxd  _ccallback.py  _ccallback_c.pxd  _ccallback_c.pyx  _disjoint_set.py  _docscrape.py  _finite_differences.py  _gcutils.py  _pep440.py  _test_deprecation_call.pyx  _test_deprecation_def.pxd  _test_deprecation_def.pyx  _testutils.py  _threadsafety.py  _tmpdirs.py  _util.py  array_api_compat.pyi  array_api_extra.pyi  decorator.py  deprecation.py  doccer.py  meson.build  messagestream.pxd  messagestream.pyx  validation.py
scikitplot/annoy/: __init__.py  __init__.pyi  _base.py  _base.pyi  _utils.py  meson.build
scikitplot/api/: __init__.py  _base.py  axisgrid.py  categorical.py  distributions.py  experimental.pxd  matrix.py  meson.build  plotters.py  regression.py  relational.py
scikitplot/backends/: __init__.py
scikitplot/cexperimental/: __init__.py  _cy_cexperimental.pyx  _cy_experimental.pxd  _logsumexp.py  meson.build
scikitplot/cexternals/: __init__.py  meson.build
scikitplot/cm/: __init__.py  _cm.py
scikitplot/colors/: __init__.py  crayons.py  plot_colortable.py
scikitplot/config/: __config__.py.in  __config__.pyi  __init__.py  _citation.py.in  _citation.pyi  _config.py  _distributor_init.py  _distributor_init.pyi  cbook.py  cbook.pyi  meson.build  scikitplot_config.h.in
scikitplot/corpus/: __init__.py  _adapters.py  _archive_handler.py  _base.py  _base.pyi  _compat.py  _corpus_builder.py  _custom_hooks.py  _pipeline.py  _schema.py  _schema.pyi  _types.py  _url_handler.py
scikitplot/cython/: DEV_NOTES.md  __init__.py  __init__.pyi  _builder.py  _cache.py  _custom_compiler.py  _gc.py  _loader.py  _lock.py  _pins.py  _profiles.py  _public.py  _result.py  _security.py  _templates_api.py  _util.py  _utils.py
(+3201 files in other folders)
